--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.6'
 services:
   opa:
     container_name: opa-server
-    image: openpolicyagent/opa:0.37.2-static
+    image: openpolicyagent/opa:latest 
     ports:
       - "8181:8181"
     # WARNING: OPA is NOT running with an authorization policy configured. This
